# project-funding-ledger

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  package-lock.json  pyproject.toml
docs/: README.md
docs/architecture/: architecture-design.docx  architecture-design.md
docs/design/: design.md
docs/development/: development-plan.docx  development-plan.md
docs/functional-specification/: functional-specification.docx  functional-specification.md
docs/roadmap/: development-roadmap.docx  development-roadmap.md
project_funding_ledger/: __init__.py  audit.py  auth.py  profile.py  supabase_client.py
project_funding_ledger/queue/: __init__.py  base.py  celery_queue.py  celery_worker.py  client.py  registry.py  sync_queue.py  tasks.py  webhooks.py
project_funding_ledger/routes/: org_import.py  organization.py  public_org.py
project_funding_ledger/static/: style.css
project_funding_ledger/templates/: admin_dashboard.html  base.html  dashboard.html  login.html  org_detail.html  organization_detail.html  organization_list.html  profile.html  register.html  signup.html
sample-data/funding-source/: funding-source.xlsx
sample-data/organization/: organization.xlsx
sample-data/transaction/: transaction.xlsx
supabase/: config.toml  seed.sql
supabase/migrations/: 20260718202200_create_user_profile.sql  20260719100000_create_audit_log.sql  20260719110000_create_organization.sql  20260719120000_create_organization_import.sql  20260719130000_allow_nullable_auth_user_id.sql  (+1 more)
tests/unit/: test_import.py  (+4 more)
(+7 files in other folders)
