[project]
name = "project-funding-ledger"
version = "0.1.0"
description = "The Project Funding Ledger (PFL) is an open source funding visibility and governance platform designed for fiscally sponsored organizations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "supabase>=2.31.0",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.0",
]


[dependency-groups]
dev = [
    "celery>=5.4.0",
    "redis>=5.0.0",
    "requests>=2.32.0",
    "pytest>=8.0.0",
]


